<?xml version="1.0" encoding="utf-8"?>
<ExtensionInfo
    displayName="@string/extension_name"
    icon="@drawable/ic_light"
    id="igpsport"
    scansDevices="true">
    <DataType
        typeId="light-control"
        displayName="@string/field_control_name"
        description="@string/field_control_description"
        icon="@drawable/ic_light"
        graphical="true" />
    <DataType
        typeId="light-control-slim"
        displayName="@string/field_control_slim_name"
        description="@string/field_control_slim_description"
        icon="@drawable/ic_light"
        graphical="true" />
    <DataType
        typeId="light-control-compact"
        displayName="@string/field_control_compact_name"
        description="@string/field_control_compact_description"
        icon="@drawable/ic_light"
        graphical="true" />
    <DataType
        typeId="light-battery"
        displayName="@string/field_battery_name"
        description="@string/field_battery_description"
        icon="@drawable/ic_light"
        graphical="false" />
</ExtensionInfo>
